# tauri-elm-app

./: .gitignore  README.md  bun.lockb  elm-watch.json  elm.json  makefile  package-lock.json  package.json
.github/workflows/: main.yaml
src/: Main.elm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
