[package]
name = "tauri-elm-app"
version = "0.1.0"
description = "A Tauri + Elm app"
authors = ["you"]
license = "ISC"
repository = "https://github.com/Airsequel/tauri-elm-app"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [
  # "devtools", # Uncomment to enable inspector
] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds
# or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
